crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__success__root_hash_package_variable.pl.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: rendered
---
ROOT
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `my` "my"
          DECL_TARGET
            HASH_VAR
              `%` "%"
              identifier "stash"
        `=` "="
        HASH_VAR
          `%` "%"
          identifier "::"
    `;` ";"
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `my` "my"
          DECL_TARGET
            SCALAR_VAR
              `$` "$"
              identifier "scalar"
        `=` "="
        HASH_SUBSCRIPT_EXPR
          SCALAR_VAR
            `$` "$"
            identifier "::"
          `{` "{"
          SUBSCRIPT
            SUB_NAME
              identifier "name"
          `}` "}"
    `;` ";"
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `my` "my"
          DECL_TARGET
            ARRAY_VAR
              `@` "@"
              identifier "array"
        `=` "="
        HASH_SUBSCRIPT_EXPR
          ARRAY_VAR
            `@` "@"
            identifier "::"
          `{` "{"
          SUBSCRIPT
            SUB_NAME
              identifier "names"
          `}` "}"
    `;` ";"
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `my` "my"
          DECL_TARGET
            HASH_VAR
              `%` "%"
              identifier "hash"
        `=` "="
        HASH_SUBSCRIPT_EXPR
          HASH_VAR
            `%` "%"
            identifier "::"
          `{` "{"
          SUBSCRIPT
            SUB_NAME
              identifier "symbols"
          `}` "}"
    `;` ";"
