crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__success__try_without_handler.pl.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: rendered
---
ROOT
  TRY_STMT
    `try` "try"
    BLOCK
      `{` "{"
      EXPR_STMT
        LIST_EXPR
          CALL_EXPR
            SUB_NAME
              identifier "do_something"
            ARG_LIST
              `(` "("
              LIST_EXPR
              `)` ")"
        `;` ";"
      `}` "}"
