crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__success__use_with_version_and_import_list.pl.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: rendered
---
ROOT
  USE_STMT
    `use` "use"
    SUB_NAME
      identifier "Exporter"
    number "5.57"
    LIST_EXPR
      QW_EXPR
        `qw` "qw"
        delimiter "("
        word list contents " import "
        delimiter ")"
    `;` ";"
  USE_STMT
    `use` "use"
    SUB_NAME
      identifier "POSIX"
    number "1.0"
    LIST_EXPR
      QW_EXPR
        `qw` "qw"
        delimiter "("
        word list contents "floor ceil"
        delimiter ")"
    `;` ";"
  USE_STMT
    `use` "use"
    SUB_NAME
      identifier "List::Util"
    number "1.45"
    `;` ";"
  USE_STMT
    `use` "use"
    SUB_NAME
      identifier "Scalar::Util"
    number "1.0"
    LIST_EXPR
      QW_EXPR
        `qw` "qw"
        delimiter "("
        word list contents "blessed reftype"
        delimiter ")"
    `;` ";"
  USE_STMT
    `use` "use"
    number "5.010"
    `;` ";"
  USE_STMT
    `use` "use"
    SUB_NAME
      identifier "strict"
    `;` ";"
  USE_STMT
    `use` "use"
    SUB_NAME
      identifier "constant"
    LIST_EXPR
      SUB_NAME
        identifier "PI"
      `=>` "=>"
      LITERAL
        number "3.14159"
    `;` ";"
  NO_STMT
    `no` "no"
    SUB_NAME
      identifier "warnings"
    number "1.0"
    LIST_EXPR
      QW_EXPR
        `qw` "qw"
        delimiter "("
        word list contents "uninitialized"
        delimiter ")"
    `;` ";"
