crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__success__use_without_semicolon.pl.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: rendered
---
ROOT
  EXPR_STMT
    LIST_EXPR
      BLOCK_CALL_EXPR
        SUB_NAME
          identifier "eval"
        BLOCK
          `{` "{"
          USE_STMT
            `use` "use"
            SUB_NAME
              identifier "strict"
          `}` "}"
    `;` ";"
  EXPR_STMT
    LIST_EXPR
      BLOCK_CALL_EXPR
        SUB_NAME
          identifier "eval"
        BLOCK
          `{` "{"
          USE_STMT
            `use` "use"
            SUB_NAME
              identifier "warnings"
          `}` "}"
    `;` ";"
  EXPR_STMT
    LIST_EXPR
      BLOCK_CALL_EXPR
        SUB_NAME
          identifier "eval"
        BLOCK
          `{` "{"
          USE_STMT
            `use` "use"
            SUB_NAME
              identifier "feature"
            LIST_EXPR
              LITERAL
                string literal "'say'"
          `}` "}"
    `;` ";"
