crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__success__version_literal_expr.pl.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: rendered
---
ROOT
  USE_STMT
    `use` "use"
    SUB_NAME
      identifier "constant"
    LIST_EXPR
      SUB_NAME
        identifier "HAVE_BOOLEANS"
      `=>` "=>"
      PAREN_EXPR
        `(` "("
        LIST_EXPR
          BINARY_EXPR
            SCALAR_VAR
              `$` "$"
              raw text "^V"
            `ge` "ge"
            LITERAL
              version string "v5.36"
        `)` ")"
    `;` ";"
